Backend/error_utf8.txt
C:\Users\Likhith Kumar\Downloads\DSNLU-PRESENT\Backend\dsnlu-backend\seed-visiting.js:29
      \`INSERT INTO faculties (name, slug, designation, image_url, education_summary, phone, email, present_position, areas_of_interest, bio_html, category)
      ^
System.Management.Automation.RemoteException
SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49
System.Management.Automation.RemoteException
Node.js v22.20.0
